2014-08-20  Barton E. Schaefer  <schaefer@zsh.org>

	* Lokesh Mandvekar: 33032: Completion/Linux/Command/_docker,
	Completion/Linux/Command/.distfiles: new completion for docker

2014-08-15  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted (see 33006): Test/A05execution.ztst: timeout the final
	"read" in hung shell regression

	* 33012: Src/utils.c: add an error return value (-1) to xsymlinks()
	to differentiate when xbuf is set to the empty string; silences
	bogus warning about failed expansion

2014-08-14  Oliver Kiddle  <opk@zsh.org>

	* 32998: Completion/Unix/Command/_dsh, Completion/Unix/Command/_nm,
	Completion/Unix/Command/_mosh, Completion/Unix/Command/_rsync,
	Completion/Unix/Command/_wget: completion function updates

	* 32997: Completion/Base/Utility/_sequence, Doc/Zsh/compsys.yo,
	Completion/Unix/Command/_mount, Completion/Unix/Command/_nmap,
	Completion/Unix/Command/_pgrep, Completion/Unix/Command/_zip:
	add completion utility function for lists

2014-08-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 33002: Doc/Zsh/tcpsys.yo, Functions/TCP/tcp_expect: add option
	-P to tcp_expect for tagging matches with a string rather than
	a parameter index.

2014-08-13  Oliver Kiddle  <opk@zsh.org>

	* 32925: Completion/Zsh/Command/_kill: complete process groups,
	partly as a way to suppress insertion of ambiguous PID prefix

	* 32893: Completion/Unix/Type/_pids: move use of _call_program
	inside the _tags loop to allow processes to be separated

2014-08-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Config/version.mk: update to 5.0.5-dev-2.

2014-08-12  Mikael Magnusson  <mikachu@gmail.com>

	* 32985: NEWS: Add NEWS entry for array zipping operators.

2014-08-12  Peter Stephenson  <p.stephenson@samsung.com>

	* Axel Beckert: 32975, 32984: Doc/Zsh/Makefile.in: texi2html.conf
	location was inconsistent when building out of tree.

2014-08-10  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Completion/Base/Completer/.distfiles,